# HoverRace

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  Makefile.am  NetTarget.ncb  NetTarget.sln  README.md  README.txt  ResSpriteExt.cpp  ResSpriteExt.h  autogen-debug.sh  autogen.sh  config-cmake.in.h  config.h  config.h.in  config.in.h  configure.ac  credits.txt  hoverrace.sln  hr  hr-gdb  init-example.lua  license.txt  linux-coverage  unpacker.cpp  unpacker.vcproj  update-potfiles  valgrind-hr
NetTarget/: GrokkSoft.url  Intro.avi  Makefile.am  NetTarget.mak  NetTarget.mdp  NetTarget.vcproj  Registration.url  Stat.out
NetTarget/ColorTools/: ColorTools.cpp  ColorTools.h  ColorTools.vcproj  ColorTools.vcxproj  ColorTools.vcxproj.filters  StdAfx.cpp
NetTarget/Game2/: About.dib  Banner.cpp  Banner.h  ClientSession.cpp  ClientSession.h  CommonDialog.cpp  CommonDialog.h  Game2.aps  Game2.exe.manifest  Game2.rc  Game2.vcproj  Game2.vcproj.old  Game2.vcxproj  Game2.vcxproj.filters  GameApp.cpp  GameApp.h  InternetRoom.cpp  InternetRoom.h  License.cpp  License.h  MatchReport.cpp  MatchReport.h  NetInterface.cpp  NetInterface.h  NetworkSession.cpp  NetworkSession.h  Observer.cpp  Observer.h  RoomList.cpp  RoomList.h  RoomListDialog.cpp  RoomListDialog.h  Security.h  SelectRoomDialog.cpp  SelectRoomDialog.h  Sponsor.cpp  Sponsor.h  StdAfx.h  TrackDownloadDialog.cpp  TrackDownloadDialog.h  (+5 more)
NetTarget/GameServer/: GameServer.vcproj
NetTarget/Help/: Help.doc  display.pcx  greenwall.pcx  index.html  kctrl.pcx  ke.pcx  khome.pcx  kleft.pcx  kminus.pcx  kright.pcx  ks.pcx  ktab.pcx  kup.pcx  logo.pcx
NetTarget/MainCharacter/: MainCharacter.cpp  MainCharacter.h  MainCharacter.vcproj  MainCharacter.vcproj.old  MainCharacter.vcxproj  MainCharacter.vcxproj.filters  MainCharacterRenderer.cpp  MainCharacterRenderer.h  StdAfx.cpp
NetTarget/MazeCompiler/: LevelBuilder.cpp  LevelBuilder.h  LevelBuilderVisiblesZones.cpp  MaxeCompiler.aps  MazeCompiler.aps  MazeCompiler.vcproj  MazeCompiler.vcxproj  MazeCompiler.vcxproj.filters  Parser.cpp  Parser.h  StdAfx.cpp  TrackCommonStuff.cpp  TrackCommonStuff.h  TrackMap.cpp  TrackMap.h  main.cpp  resource.h
NetTarget/MazeDecompiler/: ChildFrm.h  HoverCad.rc  HoverCadDoc.cpp  HoverCadDoc.h  HoverCadView.cpp  HoverCadView.h  HoverTypes.cpp  HoverTypes.h  LevelBuilder.cpp  MazeCompiler.rc  MazeDecompiler.vcproj  MazeDecompiler.vcxproj.filters  Parser.h  ScaleSelect.cpp  StdAfx.cpp  TrackCommonStuff.cpp  TrackMap.cpp  main.cpp  resource.h
NetTarget/Model/: ActorPool.h  ConcreteShape.cpp  ConcreteShape.h  ContactEffect.cpp  ContactEffect.h  FreeElementMovingHelper.cpp  FreeElementMovingHelper.h  GameSession.cpp  GameSession.h  Level.cpp  Level.h  MazeElement.cpp  MazeElement.h  Model.vcproj  Model.vcproj.old  Model.vcxproj  Model.vcxproj.filters  ModelClass.h  PhysicalCollision.cpp  PhysicalCollision.h  RaceEffects.h  ShapeCollisions.cpp  ShapeCollisions.h  Shapes.cpp  Shapes.h  StdAfx.cpp  StdAfx.h  dump
NetTarget/ObjFac1/: BallElement.cpp  BallElement.h  BumperGate.cpp  BumperGate.h  DefaultSurface.cpp  DefaultSurface.h  DoubleSpeedSource.cpp  DoubleSpeedSource.h  FinishLine.cpp  FinishLine.h  FuelSource.cpp  FuelSource.h  GenericRenderer.cpp  GenericRenderer.h  HoverRender.cpp  HoverRender.h  Mine.cpp  Mine.h  Missile.cpp  Missile.h  ObjFac1.aps  ObjFac1.fbres  ObjFac1.vcproj  ObjFac1.vcproj.old  ObjFac1.vcxproj  ObjFac1.vcxproj.filters  ObjFac1Res.h  PowerUp.cpp  PowerUp.h  StdAfx.cpp  StdAfx.h  TestElement.cpp  TestElement.h  WoodSurface.cpp  WoodSurface.h  gate.h  main.cpp
NetTarget/ObjFacTools/: BitmapSurface.cpp  BitmapSurface.h  FreeElementBase.cpp  FreeElementBase.h  FreeElementBaseRenderer.cpp  FreeElementBaseRenderer.h  MovementSpec.h  ObjFacTools.vcproj  ObjFacTools.vcproj.old  ObjFacTools.vcxproj  ObjFacTools.vcxproj.filters  ObjectFactoryData.cpp  ObjectFactoryData.h  ResActor.cpp  ResActor.h  ResBitmap.cpp  ResBitmap.h  ResSound.cpp  ResSound.h  ResSprite.cpp  ResSprite.h  ResourceLib.cpp  ResourceLib.h  SpriteHandle.cpp  SpriteHandle.h
NetTarget/PaletteCreator/: PaletteCreator.cpp  PaletteCreator.vcproj  PaletteCreator.vcxproj  PaletteCreator.vcxproj.filters
NetTarget/ResourceCompiler/: BitmapHelper.cpp  BitmapHelper.h  ResActorBuilder.cpp  ResActorBuilder.h  ResBitmapBuilder.cpp  ResBitmapBuilder.h  ResSoundBuilder.cpp  ResSoundBuilder.h  ResSpriteBuilder.cpp  ResSpriteBuilder.h  ResourceCompiler.cpp  ResourceCompiler.vcproj  ResourceCompiler.vcxproj  ResourceCompiler.vcxproj.filters  ResourceLibBuilder.cpp  ResourceLibBuilder.h  StdAfx.h  TextParsing.cpp  TextParsing.h
NetTarget/Tracks/: HCad1.trk  Test.trk
NetTarget/Util/: BitPacking.h  Config.cpp  Config.h  Cursor.h  DllObjectFactory.cpp  DllObjectFactory.h  FastArray.h  FastFifo.h  FastMemManip.h  FuzzyLogic.cpp  FuzzyLogic.h  KeyHandling.h  MR_Types.h  Makefile.am  NET.APS  Profiler.cpp  Profiler.h  RecordFile.cpp  RecordFile.h  StdAfx.cpp  StdAfx.h  StrRes.cpp  StrRes.h  Util.vcproj  Util.vcxproj  Util.vcxproj.filters  WorldCoordinates.cpp  WorldCoordinates.h  resource.h
NetTarget/VideoServices/: 2DViewPort.cpp  2DViewport.h  3DViewport.cpp  3DViewport.h  3DViewportRendering.cpp  Bitmap.cpp  Bitmap.h  ColorPalette.cpp  ColorPalette.h  ColorTab.cpp  Patch.cpp  Patch.h  SoundServer.cpp  SoundServer.h  Sprite.cpp  Sprite.h  StdAfx.h  VideoBuffer.cpp  VideoBuffer.h  VideoBuffer2DDraw.cpp  VideoServices.ncb  VideoServices.vcproj  VideoServices.vcxproj  VideoServices.vcxproj.filters
NetTarget/bitmaps/: AboutBeat.tga  Back4.pcx  Ball.pcx  CarBumper.tga  CarCockpit.tga  CarCockpit1.pcx  CarCockpit2.pcx  CarCockpit24.pcx  CarCockpit25.pcx  CarCockpit2X.pcx  CarCockpit3.pcx  CarCockpit4.pcx  CarCockpit7.pcx  CarCockpit8.pcx  CarCockpitX.pcx  CarIcons.pcx  (+39 more)
client/: CMakeLists.txt  Makefile.am  StdAfx.h  client.vcproj  client.vcxproj  client.vcxproj.filters  hr-gdb.in  hr-valgrind.in  hr.in
engine/: CMakeLists.txt  Engine.cpp  Engine.h  Exception.h  Makefile.am  StdAfx.cpp  StdAfx.h  Vec.h  engine.sln  engine.vcproj  engine.vcxproj  engine.vcxproj.filters
(+1131 files in other folders)
