
AUTOMAKE_OPTIONS = subdir-objects

noinst_LTLIBRARIES = libcontrol.la
libcontrol_la_CPPFLAGS = -I.. $(HR_CPPFLAGS)
libcontrol_la_CXXFLAGS = $(HR_CXXFLAGS)
libcontrol_la_SOURCES = \
	Action.h \
	ActionPerformers.cpp \
	ActionPerformers.h \
	ControlAction.h \
	Controller.cpp \
	Controller.h \
	ControllerStrings.cpp \
	InputHandler.h \
	ObserverActions.cpp \
	ObserverActions.h
