
noinst_LTLIBRARIES = libdisplay.la
libdisplay_la_CPPFLAGS = -I.. $(HR_CPPFLAGS)
libdisplay_la_CXXFLAGS = $(HR_CXXFLAGS)
libdisplay_la_SOURCES = \
	Color.h \
	Display.h \
	Label.cpp \
	Label.h \
	ScreenFade.cpp \
	ScreenFade.h \
	UiFont.cpp \
	UiFont.h \
	UiViewModel.cpp \
	UiViewModel.h \
	Vec.h \
	View.h \
	ViewAttacher.h \
	ViewModel.h \
	SDL/SdlDisplay.cpp \
	SDL/SdlDisplay.h \
	SDL/SdlLabelView.cpp \
	SDL/SdlLabelView.h \
	SDL/SdlLegacyDisplay.cpp \
	SDL/SdlLegacyDisplay.h \
	SDL/SdlScreenFadeView.cpp \
	SDL/SdlScreenFadeView.h \
	SDL/SdlView.h

