
noinst_LTLIBRARIES = libdisplay.la
libdisplay_la_CPPFLAGS = -I.. $(HR_CPPFLAGS)
libdisplay_la_CXXFLAGS = $(HR_CXXFLAGS)
libdisplay_la_SOURCES = \
	ActionButton.cpp \
	ActionButton.h \
	Button.cpp \
	Button.h \
	ClickRegion.cpp \
	ClickRegion.h \
	Color.cpp \
	Color.h \
	Container.cpp \
	Container.h \
	Display.cpp \
	Display.h \
	FillBox.cpp \
	FillBox.h \
	Label.cpp \
	Label.h \
	ScreenFade.cpp \
	ScreenFade.h \
	UiFont.cpp \
	UiFont.h \
	UiLayoutFlags.h \
	UiViewModel.cpp \
	UiViewModel.h \
	Vec.h \
	View.h \
	ViewAttacher.h \
	ViewModel.h \
	SDL/SdlButtonView.cpp \
	SDL/SdlButtonView.h \
	SDL/SdlClickRegionView.cpp \
	SDL/SdlClickRegionView.h \
	SDL/SdlContainerView.cpp \
	SDL/SdlContainerView.h \
	SDL/SdlDisplay.cpp \
	SDL/SdlDisplay.h \
	SDL/SdlFillBoxView.cpp \
	SDL/SdlFillBoxView.h \
	SDL/SdlLabelView.cpp \
	SDL/SdlLabelView.h \
	SDL/SdlLegacyDisplay.cpp \
	SDL/SdlLegacyDisplay.h \
	SDL/SdlScreenFadeView.cpp \
	SDL/SdlScreenFadeView.h \
	SDL/SdlView.h

