
noinst_LTLIBRARIES = libdisplay.la
libdisplay_la_CPPFLAGS = -I.. $(HR_CPPFLAGS)
libdisplay_la_CXXFLAGS = $(HR_CXXFLAGS)
libdisplay_la_SOURCES = \
	ActionButton.cpp \
	ActionButton.h \
	Button.cpp \
	Button.h \
	Checkbox.cpp \
	Checkbox.h \
	Chronometer.cpp \
	Chronometer.h \
	ClickRegion.cpp \
	ClickRegion.h \
	Color.cpp \
	Color.h \
	Container.cpp \
	Container.h \
	Counter.cpp \
	Counter.h \
	Display.cpp \
	Display.h \
	FillBox.cpp \
	FillBox.h \
	FuelGauge.cpp \
	FuelGauge.h \
	Hud.cpp \
	Hud.h \
	HudDecor.cpp \
	HudDecor.h \
	HudText.cpp \
	HudText.h \
	Label.cpp \
	Label.h \
	ScreenFade.cpp \
	ScreenFade.h \
	Speedometer.cpp \
	Speedometer.h \
	SymbolIcon.cpp \
	SymbolIcon.h \
	Texture.h \
	UiFont.cpp \
	UiFont.h \
	UiLayoutFlags.h \
	UiViewModel.cpp \
	UiViewModel.h \
	Vec.h \
	View.h \
	ViewAttacher.h \
	ViewModel.h \
	SDL/SdlButtonView.cpp \
	SDL/SdlButtonView.h \
	SDL/SdlClickRegionView.cpp \
	SDL/SdlClickRegionView.h \
	SDL/SdlContainerView.cpp \
	SDL/SdlContainerView.h \
	SDL/SdlDisplay.cpp \
	SDL/SdlDisplay.h \
	SDL/SdlFillBoxView.cpp \
	SDL/SdlFillBoxView.h \
	SDL/SdlLabelView.cpp \
	SDL/SdlLabelView.h \
	SDL/SdlLegacyDisplay.cpp \
	SDL/SdlLegacyDisplay.h \
	SDL/SdlScreenFadeView.cpp \
	SDL/SdlScreenFadeView.h \
	SDL/SdlSymbolIconView.cpp \
	SDL/SdlSymbolIconView.h \
	SDL/SdlSurfaceText.cpp \
	SDL/SdlSurfaceText.h \
	SDL/SdlTexture.h \
	SDL/SdlView.h

