
AUTOMAKE_OPTIONS = subdir-objects

noinst_LTLIBRARIES = libmazecompiler.la
libmazecompiler_la_CPPFLAGS = -I.. $(HR_CPPFLAGS)
libmazecompiler_la_CXXFLAGS = $(HR_CXXFLAGS)
libmazecompiler_la_SOURCES = \
	LevelBuilder.cpp \
	LevelBuilder.h \
	LevelBuilderVisiblesZones.cpp \
	MapSprite.cpp \
	MapSprite.h \
	TrackCompileExn.h \
	TrackCompiler.cpp \
	TrackCompiler.h \
	TrackSpecParser.cpp \
	TrackSpecParser.h

