
noinst_LTLIBRARIES = libmodel.la
libmodel_la_CPPFLAGS = -I.. $(HR_CPPFLAGS)
libmodel_la_CXXFLAGS = $(HR_CXXFLAGS)
libmodel_la_SOURCES = \
	ConcreteShape.cpp \
	ConcreteShape.h \
	ContactEffect.cpp \
	ContactEffect.h \
	Level.cpp \
	Level.h \
	MazeElement.cpp \
	MazeElement.h \
	ObstacleCollisionReport.cpp \
	ObstacleCollisionReport.h \
	PhysicalCollision.cpp \
	PhysicalCollision.h \
	RaceEffects.h \
	ShapeCollisions.cpp \
	ShapeCollisions.h \
	Shapes.cpp \
	Shapes.h \
	Track.cpp \
	Track.h \
	TrackEntry.cpp \
	TrackEntry.h \
	TrackList.cpp \
	TrackList.h

